working on div as class and logos, added css file with class

--- a/code/cesar/html_css/lab01_bio/styles.css
+++ b/code/cesar/html_css/lab01_bio/styles.css
@@ -8,16 +8,17 @@ p {
     
 }
 
-.logo {
-    border: solid;
 
-}
 
 .header {
     display: inline-flex;
     margin: auto;
-    width: 200px;
     
+     
+}
+
+.logo {
+    width: fit-content;
 }
 
 
