--- a/code/rob/html/lab1/bio.css
+++ b/code/rob/html/lab1/bio.css
@@ -142,5 +142,14 @@ hr.bio_line{
     color: orange;
     text-decoration: none;
 }
-
+footer{
+    background: rgb(19, 18, 18);
+    display: flex;
+    color: white;
+    min-height: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5rem;
+}
 /* max-v-h */
